[gd_scene load_steps=21 format=3 uid="uid://cggirilar04rf"]

[ext_resource type="Script" uid="uid://divjm7vh3v5ku" path="res://scenes/drawing_menu/fade.gd" id="2_jhsg7"]
[ext_resource type="Texture2D" uid="uid://dhsalw6vqbdyo" path="res://art/textures/wahoo.jpg" id="2_klehf"]
[ext_resource type="Script" uid="uid://glqprfg2igj4" path="res://scenes/drawing_menu/drawing_menu.gd" id="2_lkd8s"]
[ext_resource type="Material" uid="uid://bsrame6euup8a" path="res://art/materials/blur.tres" id="2_ursla"]
[ext_resource type="Texture2D" uid="uid://bkh76dvbqbg34" path="res://art/textures/paper_wider_top.png" id="3_jhsg7"]
[ext_resource type="Script" uid="uid://bcclitgetle4w" path="res://scenes/drawing_menu/drawing_canvas.gd" id="3_lkd8s"]
[ext_resource type="Material" uid="uid://bkjo273u3gy8w" path="res://scenes/drawing_menu/drawing_color_shader.tres" id="4_vk8ld"]
[ext_resource type="PackedScene" uid="uid://d2w75hgcebnn2" path="res://scenes/drawing_menu/color_button.tscn" id="5_56lbc"]
[ext_resource type="Texture2D" uid="uid://dd4v1duhv37j1" path="res://art/textures/crayon_texture_02_white.png" id="6_rqani"]
[ext_resource type="Texture2D" uid="uid://5vveqv5p53nw" path="res://scenes/moss_test_scenes/images/hitdabricks.jpg" id="7_rdw8d"]
[ext_resource type="AudioStream" uid="uid://is010fk751gl" path="res://audio/drawing.mp3" id="8_ca4ua"]
[ext_resource type="Texture2D" uid="uid://54aegjalli6a" path="res://art/sprites/crayon_rect_2.png" id="8_oyudf"]
[ext_resource type="Texture2D" uid="uid://dhrfkkj2wvdal" path="res://art/textures/drawing_frame.png" id="9_21hyc"]
[ext_resource type="Script" uid="uid://b5dh4rckluhpc" path="res://scenes/drawing_menu/erase_button.gd" id="9_416s1"]
[ext_resource type="Theme" uid="uid://daj8x2m8ugs77" path="res://scenes/drawing_menu/menu_text_theme.tres" id="9_bmxw4"]
[ext_resource type="Texture2D" uid="uid://dv7scncqk2du7" path="res://art/sprites/eraser.png" id="10_vk8ld"]
[ext_resource type="AudioStream" uid="uid://dyb6654j7wd01" path="res://audio/paper/paper.tres" id="14_vk8ld"]
[ext_resource type="Script" uid="uid://d2snb7d8qu2no" path="res://scenes/drawing_menu/accept_drawing.gd" id="16_friqn"]
[ext_resource type="AudioStream" uid="uid://c65ltcxn65trs" path="res://audio/accept.mp3" id="17_ymptv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jhsg7"]

[node name="DrawingMenu" type="CanvasLayer" node_paths=PackedStringArray("primary_button", "secondary_button", "prompt_title", "drawingCanvas", "acceptPopup", "drawingPreview")]
script = ExtResource("2_lkd8s")
primary_button = NodePath("Control/PrimaryColorButton")
secondary_button = NodePath("Control/SecondaryColorButton2")
prompt_title = NodePath("Control/Prompt Title")
drawingCanvas = NodePath("Control/MarginContainer/DrawingCanvas")
acceptPopup = NodePath("Control/Accept Panel")
drawingPreview = NodePath("Control/Accept Panel/DrawingPreview")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 630.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurBackground" type="ColorRect" parent="Control"]
material = ExtResource("2_ursla")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -283.0
offset_top = -59.0
offset_right = 293.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.995898)

[node name="DrawingFrameBG" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 369.0
offset_top = 113.0
offset_right = 889.0
offset_bottom = 633.0
color = Color(0.83, 0.900833, 1, 0.431373)

[node name="PaperBackground" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1335.0
offset_top = -1060.0
offset_right = 1340.0
offset_bottom = 1100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.335, 0.335)
pivot_offset = Vector2(1337.5, 1050)
texture = ExtResource("3_jhsg7")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -215.0
offset_right = 282.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.897556, 0.897556)

[node name="DrawingCanvas" type="TextureRect" parent="Control/MarginContainer"]
texture_filter = 1
material = ExtResource("4_vk8ld")
layout_mode = 2
texture = ExtResource("2_klehf")
expand_mode = 1
script = ExtResource("3_lkd8s")
brushTexture = ExtResource("6_rqani")
brushSpacing = 0.1

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Control/MarginContainer/DrawingCanvas"]
stream = ExtResource("8_ca4ua")
volume_db = -8.889

[node name="BrushSlider" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = 245.0
offset_right = 514.0
offset_bottom = 313.0
grow_vertical = 2
rotation = 4.71239
scale = Vector2(1.20526, 1.20526)
theme_override_styles/slider = SubResource("StyleBoxTexture_jhsg7")
min_value = 16.0
max_value = 128.0
step = 16.0
value = 32.0
rounded = true
tick_count = 8
ticks_on_borders = true

[node name="PrimaryColorButton" parent="Control" instance=ExtResource("5_56lbc")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -173.0
offset_right = 28.0
offset_bottom = 83.0
grow_vertical = 2
rotation = -1.0472
scale = Vector2(0.863742, 0.863742)
size_flags_vertical = 3
icon = ExtResource("8_oyudf")
backendColor = Color(1, 0, 0, 1)

[node name="SecondaryColorButton2" parent="Control" instance=ExtResource("5_56lbc")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -19.0
offset_right = 28.0
offset_bottom = 237.0
grow_vertical = 2
rotation = -1.0472
scale = Vector2(0.863742, 0.863742)
size_flags_vertical = 3
icon = ExtResource("8_oyudf")
backendColor = Color(0, 1, 0, 1)

[node name="EraseButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 174.0
offset_right = 52.0
offset_bottom = 345.0
grow_vertical = 2
rotation = -1.0472
text = " "
icon = ExtResource("10_vk8ld")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("9_416s1")

[node name="Prompt Title" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 384.0
offset_top = 72.0
offset_right = -351.0
offset_bottom = 127.0
grow_horizontal = 2
theme = ExtResource("9_bmxw4")
theme_override_colors/default_color = Color(0.1364, 0.32984, 0.62, 1)
text = "This is a rather long title to test"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Accept Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -351.0
offset_top = -112.0
offset_right = -288.0
offset_bottom = -67.0
grow_horizontal = 0
grow_vertical = 0
text = "accept"

[node name="Accept Panel" type="Panel" parent="Control"]
visible = false
material = ExtResource("2_ursla")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/Accept Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Accept Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.0
offset_top = 10.0
offset_right = 240.0
offset_bottom = 156.0
grow_horizontal = 2
theme = ExtResource("9_bmxw4")
text = "is this Acceptable?"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawingFrameBG" type="TextureRect" parent="Control/Accept Panel"]
modulate = Color(0.88, 0.93, 1, 0.286275)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1335.0
offset_top = -1061.0
offset_right = 1340.0
offset_bottom = 1099.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.335, 0.335)
pivot_offset = Vector2(1337.5, 1050)
texture = ExtResource("9_21hyc")

[node name="DrawingPreview" type="TextureRect" parent="Control/Accept Panel"]
texture_filter = 1
material = ExtResource("4_vk8ld")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -215.0
offset_right = 282.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.897556, 0.897556)
texture = ExtResource("7_rdw8d")
expand_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Accept Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -82.0
offset_right = 188.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="YesButton" type="Button" parent="Control/Accept Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"
script = ExtResource("16_friqn")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Control/Accept Panel/HBoxContainer/YesButton"]
stream = ExtResource("17_ymptv")

[node name="NoButton" type="Button" parent="Control/Accept Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="ControlFade" type="Node" parent="."]
script = ExtResource("2_jhsg7")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("14_vk8ld")
volume_db = -10.667

[connection signal="finish_drawing" from="." to="Control/Accept Panel/DrawingPreview" method="set_texture"]
[connection signal="value_changed" from="Control/BrushSlider" to="Control/MarginContainer/DrawingCanvas" method="change_brush_size"]
[connection signal="pressed" from="Control/EraseButton" to="Control/MarginContainer/DrawingCanvas" method="change_color" binds= [Color(0, 0, 0, 0.01)]]
[connection signal="pressed" from="Control/Accept Button" to="." method="query_accept"]
[connection signal="pressed" from="Control/Accept Panel/HBoxContainer/YesButton" to="." method="save_drawing"]
[connection signal="pressed" from="Control/Accept Panel/HBoxContainer/YesButton" to="Control/Accept Panel/HBoxContainer/YesButton" method="play"]
[connection signal="pressed" from="Control/Accept Panel/HBoxContainer/NoButton" to="." method="retur_to_drawing"]
